src/objects/TriggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>EnableDebugging__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Controls if debug statements from TriggerHandler are shown in the logs</inlineHelpText>
        <label>Enable Debugging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecuteTriggers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Execute Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HandlerClassesToSkip__c</fullName>
        <inlineHelpText>Enter any handler classes that should be skipped (1 per line). For example:
LeadTriggerHandler
TaskTriggerHandler</inlineHelpText>
        <label>Handler Classes to Skip</label>
        <type>TextArea</type>
    </fields>
    <label>Trigger Settings</label>
</CustomObject>